subdir('meson_deps/meson/args')
subdir('meson_deps/meson/inc')
#############################################################################
subdir('meson_deps/meson/deps/gd')
subdir('meson_deps/meson/deps/ansicodes')
subdir('meson_deps/meson/deps/parson')
subdir('meson_deps/meson/deps/cargs')
subdir('meson_deps/meson/deps/djbhash')
subdir('meson_deps/meson/deps/c_stringfn')
subdir('meson_deps/meson/deps/c_string_buffer')
subdir('meson_deps/meson/deps/asprintf')
subdir('meson_deps/meson/deps/uuid4')
subdir('meson_deps/meson/deps/c_fsio')                                                               
subdir('meson_deps/meson/deps/bytes')
subdir('meson_deps/meson/deps/ms')
subdir('meson_deps/meson/deps/timestamp')
subdir('meson_deps/meson/deps/slug')
subdir('meson_deps/meson/deps/greatest')
subdir('meson_deps/meson/deps/fs')
subdir('meson_deps/meson/deps/c_timer')
