subdir('c_deps/meson/args')
subdir('c_deps/meson/inc')
#############################################################################
subdir('c_deps/meson/deps/png')
subdir('c_deps/meson/deps/gd')
subdir('c_deps/meson/deps/ansicodes')
subdir('c_deps/meson/deps/parson')
subdir('c_deps/meson/deps/cargs')
subdir('c_deps/meson/deps/djbhash')
subdir('c_deps/meson/deps/c_stringfn')
subdir('c_deps/meson/deps/c_string_buffer')
subdir('c_deps/meson/deps/asprintf')
subdir('c_deps/meson/deps/uuid4')
subdir('c_deps/meson/deps/c_fsio')                                                               
subdir('c_deps/meson/deps/bytes')
subdir('c_deps/meson/deps/ms')
subdir('c_deps/meson/deps/timestamp')
subdir('c_deps/meson/deps/slug')
subdir('c_deps/meson/deps/c_greatest')
subdir('c_deps/meson/deps/fs')
subdir('c_deps/meson/deps/c_timer')
